# GreenTorch

./: .gitignore  README.md  build.sh  build_crates.py  green_torch.py  greentorch.py  pyproject.toml
core/: devicemanager.py
src/greentorch/: __init__.py  greentorch.py
src/greentorch/core/: backend.py  devicemanager.py  optimizer.py  tools.py
src/greentorch_stenh/: greentorch.py
src/optimizer/: Cargo.toml
src/optimizer/src/: lib.rs
src/rust_core/: Cargo.toml  pyproject.toml
src/rust_core/src/: lib.rs
test/: llm.py
tests/: llm.py
