[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"
[project]
name = "greentorch"
version = "0.0.4"
authors = [
  { name="Sten Heimbrodt", email="sten.heimbrodt@hotmail.de" },
]
description = "GreenTorch is a library to optimize energy usage of the GPU during classical AI training."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gespel/GreenTorch"
Issues = "https://github.com/gespel/GreenTorch/issues"

[tool.maturin]
python-source = "src"
manifest-path = "src/rust_core/Cargo.toml"
module-name = "greentorch.rust_core"
