[build-system]
requires = ["hatchling>=1.26", "maturin>=1.13,<2.0"]
build-backend = "hatchling.build"
[project]
name = "greentorch"
version = "0.0.4"
authors = [
  { name="Sten Heimbrodt", email="sten.heimbrodt@hotmail.de" },
]
description = "GreenTorch is a library to optimize energy usage of the GPU during classical AI training."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gespel/GreenTorch"
Issues = "https://github.com/gespel/GreenTorch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/greentorch"]

[tool.hatch.build.hooks.custom]
path = "build_crates.py"
